tests/diagnostics/catalog/snapshots/ir/IR0056.snap
error[IR0056]: IR_E_TRAIT_NOT_IMPLEMENTED
 --> tests/diagnostics/catalog/sources/ir/IR0056.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0056
  = help: keep IR validation diagnostics structured and catalog-backed
